src/manipulator/check/snapshots/annatto__manipulator__check__tests__fail_deserialization_with_bad_query_in_expected_result.snap
---
source: src/manipulator/check/tests.rs
expression: test.err().unwrap()
---
Error in query:
`annis:tok`
[0:7-0:9] Unexpected token in query. Expected one of: ID
