src/manipulator/check/snapshots/annatto__manipulator__check__tests__failed_only.snap
---
source: src/manipulator/check/tests.rs
expression: output
---
+-----------------+--------+
| description     | result |
+-----------------+--------+
| I want that     | [31m1 ≠ 0[0m  |
| weird_anno_name |        |
+-----------------+--------+
