src/manipulator/check/snapshots/annatto__manipulator__check__tests__layer_check_fail_policy_warn.snap
---
source: src/manipulator/check/tests.rs
expression: run.err().unwrap().to_string()
---
Checks failed:
Check layer `cat` for invalid values.
Check layer `pos` for invalid values.
Check layer `deprel` for invalid values.
Check layer `func` for invalid values.
