src/manipulator/check/snapshots/annatto__manipulator__check__tests__log_message_overwrite.snap
---
source: src/manipulator/check/tests.rs
expression: log_message
---
Writing check log to file <tmp-dir>/annatto_test_report_out_overwrite.txt ...
