src/manipulator/check/snapshots/annatto__manipulator__check__tests__overwrite_report.snap
---
source: src/manipulator/check/tests.rs
expression: log_contents.unwrap()
---
+--------------------------+--------+
| description              | result |
+--------------------------+--------+
| Correct number of tokens | passed |
+--------------------------+--------+
