src/manipulator/check/snapshots/annatto__manipulator__check__tests__policy_hierarchy_fail.snap
---
source: src/manipulator/check/tests.rs
expression: run.err().unwrap()
---
Checks failed:
I demand 0 tokens!
Layer `cat_wrong_name` exists
Layer `pos_wrong_name` exists
Layer `sentence_wrong_name` exists
